[First Login Screen][IBM Library] First login screen with a stock image. IBM Library has been added to the manifest and build files along with the jars.

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,4 +5,8 @@
         <!-- Customize your theme here. -->
     </style>
 
+    <style name="AppNameScreen" parent="@style/TextAppearance.AppCompat.Display3">
+        <item name="android:textColor">#fff</item>
+    </style>
+
 </resources>
