--- a/libraries/FacebookSDK/res/values/colors.xml
+++ b/libraries/FacebookSDK/res/values/colors.xml
@@ -3,4 +3,7 @@
     <dimen name="com_facebook_picker_place_image_size">64dp</dimen>
     <color name="com_facebook_picker_search_bar_background">#f5f5f7</color>
     <color name="com_facebook_picker_search_bar_text">#bcbdc2</color>
+
+    <color name="title_app_name">#fff</color>
+    <color name="theme_accent_1_light">#8ad4fa</color>
 </resources>
